[project]
name = "learn"
version = "0.1.0"
description = "Personal learning and documentation site"
authors = [
    { name = "Stephen Ho", email = "heweijian4933@gmail.com" },
]
dependencies = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.0",
    "mkdocs-material-extensions>=1.3.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "mkdocs-git-authors-plugin>=0.7.0",
    "jieba>=0.42.1",
    "pillow>=10.0.0",
    "cairosvg>=2.7.0",
]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []
